# introspection

./: .gitignore  .plan_patching_sweep.md  CLAUDE.md  attribution.py  attribution_it_pt.py  concept_vec.py  concept_vectors.py  judge.py  patch_base_it.py  patching.py  patching_success_failure.py  patching_sweep_success_failure_judge.py  patching_sweep_success_failure_rollouts.py  pyproject.toml  pyrightconfig.json  refusal_steering.py  setup.sh  utils_attribution.py  utils_introspection.py  utils_judge.py  utils_misc.py  utils_model.py
.claude/: settings.local.json
.claude/hooks/: bell.sh
refusal/: refusal_directions.pt
