[project]
name = "introspection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.26.0",
    "bitsandbytes>=0.49.0",
    "caller",
    "datasets>=4.4.2",
    "huggingface-hub>=0.36.0",
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
    "ipywidgets>=8.1.8",
    "jaxtyping>=0.3.4",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.1",
    "jupyterlab-widgets>=3.0.16",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "rich>=14.2.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "wandb>=0.23.1",
]

[tool.ruff.lint]
ignore = ["F821", "F722"]

[tool.uv.sources]
caller = { path = "../caller", editable = true }

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "tqdm>=4.67.1",
]
